build/dev/minikube/multi_region_dss_local.yaml
# australia-southeast1-a
apiVersion: v1
kind: Service
metadata:
  name: australia-southeast1-a
  labels:
    app: cockroachdb
spec:
  ports:
    # SQL client port
    - name: grpc
      port: 26257
      targetPort: 26257
    # Admin UI
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: cockroachdb
    region: australia-southeast1-a
---
# australia-southeast1-b
apiVersion: v1
kind: Service
metadata:
  name: australia-southeast1-b
  labels:
    app: cockroachdb
spec:
  ports:
    # SQL client port
    - name: grpc
      port: 26257
      targetPort: 26257
    # Admin UI
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: cockroachdb
    region: australia-southeast1-b
---
# australia-southeast1-c
apiVersion: v1
kind: Service
metadata:
  name: australia-southeast1-c
  labels:
    app: cockroachdb
spec:
  ports:
    # SQL client port
    - name: grpc
      port: 26257
      targetPort: 26257
    # Admin UI
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: cockroachdb
    region: australia-southeast1-c
---
# intra-node service
apiVersion: v1
kind: Service
metadata:
  name: cockroachdb
  labels:
    app: cockroachdb
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
    prometheus.io/scrape: "true"
    prometheus.io/path: "_status/vars"
    prometheus.io/port: "8080"
spec:
  ports:
    - port: 26257
      targetPort: 26257
      name: grpc
    - port: 8080
      targetPort: 8080
      name: http
  publishNotReadyAddresses: true
  clusterIP: None
  selector:
    app: cockroachdb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: roach-sydney
  labels:
    app: cockroachdb
    region: australia-southeast1-a
spec:
  serviceName: "cockroachdb"
  replicas: 2
  selector:
    matchLabels:
      app: cockroachdb
  template:
    metadata:
      labels:
        app: cockroachdb
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - cockroachdb
              topologyKey: kubernetes.io/hostname
      containers:
      - name: roach-sydney
        image: cockroachdb/cockroach:v21.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 26257
          name: grpc
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: "/health"
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: "/health?ready=1"
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 2
        volumeMounts:
        - name: datadir
          mountPath: /cockroach/cockroach-data
        command:
          - "/bin/bash"
          - "-ecx"
          # The use of qualified `hostname -f` is crucial:
          # Other nodes aren't able to look up the unqualified hostname.
          - exec
            /cockroach/cockroach
            start
            --logtostderr
            --insecure
            --advertise-host $(hostname -f)
            --http-addr 0.0.0.0
            --join roach-sydney-0.cockroachdb.default.svc.cluster.local,roach-melbourne-0.cockroachdb.default.svc.cluster.local,roach-perth-0.cockroachdb.default.svc.cluster.local
            --cache $(expr $MEMORY_LIMIT_MIB / 4)MiB
            --max-sql-memory $(expr $MEMORY_LIMIT_MIB / 4)MiB
            --locality=region=australia-southeast1-a,zone=b
      # No pre-stop hook is required, a SIGTERM plus some time is all that's
      # needed for graceful shutdown of a node.
      terminationGracePeriodSeconds: 60
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: datadir
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: roach-melbourne
  labels:
    app: cockroachdb
    region: australia-southeast1-b
spec:
  serviceName: "cockroachdb"
  replicas: 2
  selector:
    matchLabels:
      app: cockroachdb
  template:
    metadata:
      labels:
        app: cockroachdb
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - cockroachdb
              topologyKey: kubernetes.io/hostname
      containers:
      - name: roach-melbourne
        image: cockroachdb/cockroach:v21.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 26257
          name: grpc
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: "/health"
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: "/health?ready=1"
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 2
        volumeMounts:
        - name: datadir
          mountPath: /cockroach/cockroach-data
        command:
          - "/bin/bash"
          - "-ecx"
          # The use of qualified `hostname -f` is crucial:
          # Other nodes aren't able to look up the unqualified hostname.
          - exec
            /cockroach/cockroach
            start
            --logtostderr
            --insecure
            --advertise-host $(hostname -f)
            --http-addr 0.0.0.0
            --join roach-sydney-0.cockroachdb.default.svc.cluster.local,roach-melbourne-0.cockroachdb.default.svc.cluster.local,roach-perth-0.cockroachdb.default.svc.cluster.local
            --cache $(expr $MEMORY_LIMIT_MIB / 4)MiB
            --max-sql-memory $(expr $MEMORY_LIMIT_MIB / 4)MiB
            --locality=region=australia-southeast1-b,zone=a
      # No pre-stop hook is required, a SIGTERM plus some time is all that's
      # needed for graceful shutdown of a node.
      terminationGracePeriodSeconds: 60
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: datadir
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: roach-perth
  labels:
    app: cockroachdb
    region: australia-southeast1-c
spec:
  serviceName: "cockroachdb"
  replicas: 2
  selector:
    matchLabels:
      app: cockroachdb
  template:
    metadata:
      labels:
        app: cockroachdb
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - cockroachdb
              topologyKey: kubernetes.io/hostname
      containers:
      - name: roach-perth
        image: cockroachdb/cockroach:v21.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 26257
          name: grpc
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: "/health"
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: "/health?ready=1"
            port: http
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 2
        volumeMounts:
        - name: datadir
          mountPath: /cockroach/cockroach-data
        command:
          - "/bin/bash"
          - "-ecx"
          # The use of qualified `hostname -f` is crucial:
          # Other nodes aren't able to look up the unqualified hostname.
          - exec
            /cockroach/cockroach
            start
            --logtostderr
            --insecure
            --advertise-host $(hostname -f)
            --http-addr 0.0.0.0
            --join roach-sydney-0.cockroachdb.default.svc.cluster.local,roach-melbourne-0.cockroachdb.default.svc.cluster.local,roach-perth-0.cockroachdb.default.svc.cluster.local
            --cache $(expr $MEMORY_LIMIT_MIB / 4)MiB
            --max-sql-memory $(expr $MEMORY_LIMIT_MIB / 4)MiB
            --locality=region=australia-southeast1-c,zone=a
      # No pre-stop hook is required, a SIGTERM plus some time is all that's
      # needed for graceful shutdown of a node.
      terminationGracePeriodSeconds: 60
      volumes:
      - name: datadir
        persistentVolumeClaim:
          claimName: datadir
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: http-gateway
  name: http-gateway
spec:
  minReadySeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: http-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: http-gateway
    spec:
      containers:
      - args:
        - --addr=:8080
        - --enable_scd=false
        - --gcp_prof_service_name=
        - --grpc-backend=grpc-backend.default:8081
        - --trace-requests=true
        command:
        - http-gateway
        image: interuss-local/dss
        imagePullPolicy: IfNotPresent
        name: http-gateway
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            path: /healthy
            port: 8080
        stdin: false
        tty: false
      terminationGracePeriodSeconds: 30
      volumes: []
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: http-gateway
  labels:
    name: https-ingress
  name: https-ingress
spec:
  backend:
    serviceName: http-gateway
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: http-gateway
    name: http-gateway
  name: http-gateway
spec:
  ports:
  - name: http-gateway
    port: 8080
    targetPort: 8080
  selector:
    app: http-gateway
  # type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: grpc-backend
  name: grpc-backend
spec:
  minReadySeconds: 30
  replicas: 1
  selector:
    matchLabels:
      app: grpc-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: grpc-backend
    spec:
      containers:
      - args:
        - --accepted_jwt_audiences=http-gateway
        - --addr=:8081
        - --cockroach_host=cockroachdb.default
        - --cockroach_port=26257
        - --cockroach_user=root
        - --dump_requests=true
        - --enable_scd=false
        - --gcp_prof_service_name=
        - --jwks_endpoint=https://oauth.casa-staging.rpasplatform.net/jwks.json
        - --jwks_key_ids=1
        - --locality=australia-southeast1-a
        - --public_key_files=
        command:
        - grpc-backend
        image: interuss-local/dss
        imagePullPolicy: IfNotPresent
        name: grpc-backend
        ports:
        - containerPort: 8081
          name: grpc
        stdin: false
        tty: false
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: grpc-backend
    name: grpc-backend
  name: grpc-backend
  
spec:
  ports:
  - name: grpc-backend
    port: 8081
    targetPort: 8081
  selector:
    app: grpc-backend
  type: ClusterIP
---
# apiVersion: batch/v1
# kind: Job
# metadata:
#   labels:
#     name: rid-schema-manager
#   name: rid-schema-manager
# spec:
#   completions: 1
#   parallelism: 1
#   template:
#     metadata:
#       annotations:
#         sidecar.istio.io/inject: "false"
#       labels:
#         name: rid-schema-manager
#     spec:
#       containers:
#         - image: interuss-local/db-manager:latest
#           command: ["/usr/bin/db-manager"]
#           args: ["--cockroach_host=cockroachdb.default", "--cockroach_port=26257", "--db_version=3.1.1", "--schemas_dir=/db-schemas/defaultdb"]
#           imagePullPolicy: IfNotPresent
#           name: rid-schema-manager
#           stdin: false
#           tty: false
#           volumeMounts:
#           - mountPath: /db-schemas/defaultdb
#             name: db-rid-schema
#             readOnly: false
#       restartPolicy: OnFailure
#       terminationGracePeriodSeconds: 30
#       volumes:
#       - configMap:
#           defaultMode: 420
#           name: db-rid-schema
#         name: db-rid-schema
